# Monotonic-Optimal-Binning

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  conda-env.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: FormattingTests.yml  RunTests.yml  ci.yml
data/: german_data_credit_cat.csv  insurance3r2.csv  testMono.csv
doc/: MOBPY-API-Ref.md  MOBPY-MOB-MOB-applyMOB.md  MOBPY-MOB-MOB-runMOB.md  MOBPY-MOB-MOB-setBinningConstraints.md  MOBPY-MOB-MOB.md  MOBPY-PAVA-PAVA-applyPAVA.md  MOBPY-PAVA-PAVA-runPAVA.md  MOBPY-PAVA-PAVA.md  MOBPY-plot-MOB_PLOT-MOB_PLOT-plotBinsSummary.md  MOBPY-plot-MOB_PLOT-MOB_PLOT-plotPAVACsd.md  MOBPY-plot-MOB_PLOT-MOB_PLOT.md
doc/dev-log/: MOBPY 1-0-0.txt  MOBPY 1-0-1.txt  MOBPY 1-1-0.txt  MOBPY 1-1-1.txt  MOBPY 2-0-0.txt
doc/old-ver-docs/: MOBPY-MOB-MOB-runMOB.md  MOBPY-PAVA-PAVA-runPAVA.md  MOBPY-PAVA-PAVA.md  MOBPY-plot-MOB_PLOT-MOB_PLOT-plotPAVACsd.md  MOBPY-plot-MOB_PLOT-MOB_PLOT.md
docs/: MOBPY-Overview.md  api_reference.md  config.md  init.md  logging_utils.md
docs/binning/: init.md  mob.md
docs/core/: constraints.md  merge.md  pava.md  utils.md
docs/plot/: csd_gcm.md  init.md
docs/plot/csd_gcm/: plot_gcm.md  plot_pava_animation.md  plot_pava_comparison.md  plot_pava_process.md
docs/plot/mob_plot/: plot_bin_boundaries.md  plot_bin_statistics.md  plot_binning_stability.md  plot_event_rate.md  plot_sample_distribution.md  plot_woe_bars.md
examples/: German Credit Data - Binary Target.ipynb  Insurance Data - Continuous Target.ipynb  README - example.ipynb  example1.ipynb  run_mob_example.py  run_mob_example2.py  run_mob_py.ipynb
scripts/: release_to_pypi.py  release_to_pypi.sh
src/MOBPY/: MOB.py  PAVA.py  __init__.py  config.py  exceptions.py  logging_utils.py
src/MOBPY/binning/: __init__.py  mob.py
src/MOBPY/core/: __init__.py  constraints.py  merge.py  pava.py  utils.py
src/MOBPY/numeric/: Monotone.py  MonotoneNode.py  OptimalBinning.py
src/MOBPY/pav/: PAV.py  PavMonoNode.py
src/MOBPY/plot/: MOB_PLOT.py  __init__.py  csd_gcm.py  mob_plot.py
src/OLD/numeric/: Monotone.py
src/OLD/pav/: PAV.py  PavMonoNode.py
src/main/python/: MainMOB.py
src/main/python/MOB/: MOB.py
src/main/python/MOB/numeric/: Monotone.py  MonotoneNode.py  OptimalBinning.py
src/main/python/MOB/plot/: MOB_PLOT.py
src/python/main/: MainMob.py
src/python/main/mob/monotonebinning/: mob.py  mobFunc.py  monotone.py  optimalBinning.py
src/python/main/monotone/: MonotoneTuner.py  tuneMonotone.py
src/python/monotone/: tuneMonotone.py
src/python/test/: _pandas.py  _pandasSyntax.py
src/python/test/monotone/: TestMonotone.py  TestMonotoneDoubleLinkedList.py  TestNode.py
tests/: MOBPY-test.py  MainMOB.py  Pava-test.py  conftest.py  csd-test.py  pavanode-test.py  test_binner.py  test_config.py  test_constraints.py  test_exceptions.py  test_logging_utils.py  test_merge.py  test_mob.py  test_pava.py  test_plots.py  test_plotting.py  test_property_based.py  test_utils.py
tests/mobpy-2-0-0/MOBPY/: MOB.py  PAVA.py  PAVOB.py
tests/mobpy-2-0-0/MOBPY/numeric/: OptimalBinning.py
tests/mobpy-2-0-0/MOBPY/pav/: PAV.py
