[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MOBPY"
version = "1.1.0"
authors = [
  { name="Ta-Hung (Denny) Chen", email="denny20700@gmail.com" }
]
description = "MOB is a statistical approach to transform continuous variables into optimal and monotonic categorical variables."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning"
"Bug Tracker" = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning/issues"