[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MOBPY"
version = "2.0.0"
description = "Monotone optimal binning (MOB) via PAVA with constraints, plus plotting utilities."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Ta-Hung (Denny) Chen", email = "denny20700@gmail.com" }
]
maintainers = [
    { name = "Ta-Hung (Denny) Chen", email = "denny20700@gmail.com" }
]
keywords = ["binning", "woe", "iv", "pava", "isotonic", "credit-risk", "monotonic", "scorecard", "feature-engineering"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=4.0"
]

dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0"
]

docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3",
    "nbsphinx>=0.9"
]

[project.urls]
Homepage = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning"
Repository = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning"
Issues = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning/issues"
Documentation = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning/tree/main/docs"
"Release Notes" = "https://github.com/ChenTaHung/Monotonic-Optimal-Binning/releases"

[tool.setuptools.packages.find]
where = ["src"]
include = ["MOBPY*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
MOBPY = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true